# GameEngine

./: .clang  .clang-format  .gitignore  CMakeLists.txt  build.sh  imgui.ini  readme  release.sh  run.sh  runtool.sh  shaderbuild.sh
.VSCodeCounter/2024-02-07_12-34-38/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
shaders/: colored_triangle.frag  colored_triangle.vert  default_lit.frag  hdr.frag  textured_lit.frag
shaders/spiv/: colored_triangle.frag.spv  colored_triangle.vert.spv  default_lit.frag.spv  funky_triangle.frag.spv  mesh.frag.spv  mesh.vert.spv  textured_lit.frag.spv  tri_mesh.vert.spv  tri_mesh_descriptors.vert.spv  tri_mesh_pushconstants.vert.spv  tri_mesh_ssbo.vert.spv  triangle.frag.spv  triangle.vert.spv
src/: CMakeLists.txt  helper.cpp  helper.h  main.cpp  tamhelper.cpp  tamhelper.h  vk_create.cpp  vk_create.h  vk_descriptors.cpp  vk_descriptors.h  vk_engine.cpp  vk_engine.h  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_textures.cpp  vk_types.h  vkcreate.cpp  vkcreate.h
src/camera/: CMakeLists.txt  camera.cpp  camera.h
src/collision/: CMakeLists.txt  octrees.cpp  octrees.h
src/collsion/: octrees.cpp
src/input/: input_manager.h
src/renderer/: CMakeLists.txt  descriptor.cpp  descriptor.h  renderer.cpp  renderer.h  rendergraph.cpp  resource.cpp  resource.h  types.cpp  types.h  vk_create.cpp  vk_create.h  vk_engine.cpp  vk_engine.h  vk_mesh.cpp  vk_mesh.h
src/renderer/common/: common_types.h
src/renderer/object/: CMakeLists.txt  cube.h  mesh.cpp  mesh.h  texture.cpp
src/renderer/util/: CMakeLists.txt  helper.cpp  helper.h  texture.cpp  vk_descriptors.cpp  vk_descriptors.h  vk_initializers.cpp  vk_initializers.h
tools/AtlasGenerator/: CMakeLists.txt
tools/AtlasGenerator/src/: main.cpp
